Made the to-do list links word-wrap for mobile. Fixed a few margin issues too. [Finishes: #84861498]

--- a/app/assets/stylesheets/think_feel_do_engine/stepped_care.css.scss
+++ b/app/assets/stylesheets/think_feel_do_engine/stepped_care.css.scss
@@ -162,6 +162,11 @@ ul#nav_main li.active a
   display:block;
 }
 
+li .btn{
+  white-space: normal;
+  text-align:left;
+}
+
 /*******************************[Media]***************************************/
 
 video{
